# andy-auth

./: .dockerignore  .gitignore  Directory.Build.props  Dockerfile  GETTING-STARTED.md  LICENSE  MCP-DEPLOYMENT-SUMMARY.md  MCP-TEST-README.md  PROJECT-SUMMARY.md  README.md  ROADMAP.md  TESTING-REVIEW.md  andy-auth.sln  check-claude-client.sh  cookies.txt  docker-compose.yml  fix-claude-redirects-correct.sql  fix-claude-redirects.sql  mcp-automated-test-local-20251210-084308.json  nixpacks.toml  railway.json  test-audience-debug.sh  test-lexipro-integration.sh  test-mcp-auth-flow.sh  test-mcp-automated.sh  wait-and-test-uat.sh
.github/workflows/: build-and-release.yml  build.yml  publish.yml
certs/: .gitignore  README.md
config/: registration.json
content/help/: api-access.md  authentication.md  getting-started.md  mfa.md  session-management.md
docs/: ADMIN.md  ARCHITECTURE.md  ASSISTANT-INTEGRATION.md  AZURE-AD.md  CODE_COVERAGE.md  DEPLOYMENT.md  LIBRARY.md  LOCAL-SETUP.md  PASSKEYS.md  SECURITY.md  SESSION-TRUTH-API.md  presentation.md  testing.md
docs/help/: overview.fr.md  overview.md
docs/issues/: cross-mode-test-factory.md  dcr-controller-tests-iconfig-regression.md  (+6 more)
examples/: .gitignore  README.md  test-examples.sh
examples/rust-oauth/: Cargo.toml  README.md
examples/rust-oauth/src/: main.rs
local-packages/: Andy.Telemetry.0.2.0.nupkg
tests/: .gitignore  config.py  oauth-flow-test.py  run_all_tests.py  test_authorization_code.py  test_base.py  test_client_credentials.py  test_discovery.py  test_dynamic_registration.py  test_token_operations.py
(+294 files in other folders)
